rewrite JavaScript, refresh fonts and colors

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email: kabirgoel.kg@gmail.com
 description: >
   A refreshingly simple way to work.
 baseurl: "/minty"
-url: "http://kabirgoel.com"
+url: "//kabirgoel.com"
 twitter_username: notkabir
 github_username: kbrgl
 
